# realestate_agent

./: .env  .gitignore  Presentation.pptx  README.md  netlify.toml  pyproject.toml  realestate_agent.db  realestate_agent.db-shm  realestate_agent.db-wal  render.yaml  requirements.txt
frontend/: README.md  index.html  package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.css  App.js
realestate_agent/: realestate_agent.db
realestate_agent/src/realestate_agent/: realestate_agent.db  realestate_agent.db-wal
src/realestate_agent/: api.py  main.py  realestate_agent.db-shm  scraper.py
